Add content to body

--- a/recipes/nacho-casserole.html
+++ b/recipes/nacho-casserole.html
@@ -8,5 +8,26 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Nacho Casserole</h1>
+     <img src="../images/nachos.jpg" alt="nacho casserole served" width="300">
+    <h2>Description</h2>
+    <p></p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 pound ground beef</li>
+        <li>1 large white onion (minced)</li>
+        <li>2 large tomatoes (diced)</li>
+        <li>1 (8 ounce) bag of tortilla chips</li>
+        <li>2 cloves of garlic</li>
+        <li>2 limes</li>
+        <li>1 cup of sour cream</li>
+        <li>2 cups of cheese (any melting cheese)</li>
+        <li>2 sprigs of cilantro</li>
+        <li>1 chopped jalapeno pepper (optional)</li>
+        <li>salt and pepper to taste</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        
+    </ol>
 </body>
 </html>
