--- a/recipes/osso-buco.html
+++ b/recipes/osso-buco.html
@@ -8,6 +8,25 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Osso Buco</h1>
-
+     <img src="../images/osso-buco.jpg" alt="osso buco" width="300">
+    <h2>Description</h2>
+    <p></p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 pounds of veal shanks</li>
+        <li>1/4 cup of all purpose flour</li>
+        <li>1/4 cup of butter</li>
+        <li>2 cloves of garlic (crushed)</li>
+        <li>1 large onion (chopped)</li>
+        <li>1 large carrot (chopped)</li>
+        <li>2/3 cup dry white wine</li>
+        <li>2/3 cup beef stock</li>
+        <li>1 (14.5 ounce) can diced tomatoes</li>
+        <li> salt and pepper to test</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        
+    </ol>
 </body>
 </html>
