--- a/recipes/shephers-pie.html
+++ b/recipes/shephers-pie.html
@@ -8,5 +8,25 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Shepherd's Pie</h1>
+    <img src="../images/shepherds-pie.jpg" alt="shepherd's pie" width="300">
+    <h2>Description</h2>
+    <p></p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>4 large potatoes (peeled and cubed)</li>
+        <li>1 tbsp butter</li>
+        <li>1/2 cup shredded cheddar cheese</li>
+        <li>5 carrots (chopped)</li>
+        <li>1 tbsp vegetable oil</li>
+        <li>1 onion (chopped)</li>
+        <li>1 lb ground beef or lamb</li>
+        <li>2 tbsp all-purpose flour</li>
+        <li>1 tbsp ketchup</li>
+        <li>3/4 cup beef broth</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+
+    </ol>
 </body>
 </html>
