--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Odin Recipes</h1>
     <ul>
     <li><a href="./recipes/osso-buco.html">Osso Buco</a></li>
-    <li><a href="./recipes/shephers-pie.html">Shepherd's Pie</a></li>
+    <li><a href="./recipes/shepherds-pie.html">Shepherd's Pie</a></li>
     <li><a href="./recipes/nacho-casserole.html">Nacho Casserole</a></li>
     </ul>
 </body>
