Add remaining information to all pages

--- a/recipes/nacho-casserole.html
+++ b/recipes/nacho-casserole.html
@@ -15,19 +15,31 @@
     <ul>
         <li>1 pound ground beef</li>
         <li>1 large white onion (minced)</li>
-        <li>2 large tomatoes (diced)</li>
+        <li>3 large tomatoes (diced)</li>
+        <li>1 small red onion (diced)</li>
         <li>1 (8 ounce) bag of tortilla chips</li>
-        <li>2 cloves of garlic</li>
+        <li>2 cloves of garlic (crushed)</li>
         <li>2 limes</li>
         <li>1 cup of sour cream</li>
-        <li>2 cups of cheese (any melting cheese)</li>
-        <li>2 sprigs of cilantro</li>
+        <li>2 cups of shredded cheese (any melting cheese)</li>
+        <li>2 sprigs of cilantro (chopped)</li>
         <li>1 chopped jalapeno pepper (optional)</li>
         <li>salt and pepper to taste</li>
+        <li>cooking oil</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        
+        <li>Heat a large frying pan over medium to medium-high heat. Add oil to the pan.</li>
+        <li>Add the minced white onion into the pan as well as the 2 crushed cloves of garlic. Cook until onion is tender.</li>
+        <li>Add 2 large diced tomatoes to the same pan. Cook for around 5 minutes.</li>
+        <li>Add the ground beef into the frying pan and cook until brown. Add salt and pepper to taste.</li>
+        <li>In a bowl, mix in the diced red onion, the remaining diced tomato, the chopped cilantro and optionally the jalapenos.</li>
+        <li>Squeeze the juice of the two limes and add them to the mixture. Let rest in the fridge.</li>
+        <li>In a large casserole dish, spread the tortilla chips evenly without crushing them to create a base for the casserole.</li>
+        <li>Add the ground beef mixture on top of the tortilla chips.</li>
+        <li>Evenly spread the sour cream on top of the meat and add the shredded cheese on top of it.</li>
+        <li>Cook in a preheated oven for 15 minutes or until cheese starts to bubble and brown.</li>
+        <li>Serve in a bowl with the chilled pico de gallo made earlier and optionally more sour cream.</li>
     </ol>
 </body>
 </html>
