--- a/recipes/osso-buco.html
+++ b/recipes/osso-buco.html
@@ -26,7 +26,15 @@
     </ul>
     <h2>Steps</h2>
     <ol>
-        
+        <li>Dust the veal shanks with flour until they are lightly covered</li>
+        <li>Heat a large skillet and melt the butter over medium to medium-high heat. Cook the veal until browned.</li>
+        <li>Once cooked set the shanks aside in a bowl and keep warm.</li>
+        <li>In the same skillet, add two cloves of crushed garlic and chopped onion. Cook and stir until onion is tender.</li>
+        <li>Return the veal to the pan and mix in the carrots and the wine. Simmer for 10 minutes.</li>
+        <li>Pour in the tomatoes and the beef stock. Season with salt and pepper.</li>
+        <li>Cover and simmer for 1 and 1/2 hours basting the veal every 15 minutes.</li>
+        <li>Meat should be tender but not falling of the bone.</li>
+        <li>Serve and enjoy!</li>
     </ol>
 </body>
 </html>
