--- a/recipes/shepherds-pie.html
+++ b/recipes/shepherds-pie.html
@@ -26,7 +26,20 @@
     </ul>
     <h2>Steps</h2>
     <ol>
-
+        <li>Bring a large pot of salted water to boil and add cubed and peeled potatoes until tender for about 15 minutes</li>
+        <li>Drain the potatoes and mix in the butter, the onion and 1/4 cup fo shredded cheese. Season with salt and pepper to taste and set aside.</li>
+        <li>In a large pot of salted boiling water, cook the carrots until tender but firm for 15 minutes.</li>
+        <li>Drain the carrots.</li>
+        <li> Heat a large frying pan and add cooking oil.</li>
+        <li>Add onions into the frying pan and cook until clear.</li>
+        <li>In the same frying pan, without removing the onions, add the ground beef or lamb and cooked until brown.</li>
+        <li>Pour off excess fat and stir in flour. Cook for 1 minute.</li>
+        <li>Add the ketchup and the broth into the frying pan. Bring it to a boil and reduce the heat to let simmer for 5 minutes.</li>
+        <li>Take the ground beef mixture from the frying pan and spread it into a 2 quart casserole dish.</li>
+        <li>Take the carrots and spread them on top of the meat in the casserole dish.</li>
+        <li>Next, spread the mashed potatoes on top of the carrots until evenly distributed. Spread the rest of the shredded cheese on top.</li>
+        <li>Bake in a preheated oven for 20 minutes, or until golden brown.</li>
+        <li>Serve and enjoy!</li>
     </ol>
 </body>
 </html>
