Add styles.css and apply styles to existing html files

--- a/recipes/nacho-casserole.html
+++ b/recipes/nacho-casserole.html
@@ -3,14 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Nacho Casserole</title>
 </head>
 <body>
     <a href="../index.html">Home</a>
+    <br>
     <h1>Nacho Casserole</h1>
-     <img src="../images/nachos.jpg" alt="nacho casserole served" width="300">
-    <h2>Description</h2>
-    <p></p>
+    <div class="pic">
+     <img src="../images/nachos.jpg" alt="nacho casserole served">
+    </div>
+     <div class="description">
+     <h2>Description</h2>
+    <p>Nachos tortilla chips have rapidly become a staple in everyone's pantry as of late. Making a dish out of them is very simple. With a little patience and love, a nice casserole to share with friends and family (or alone) can be done very easily. With some homemade pico de gallo to add freshness and small kick to the dish, this casserole will have your loved ones raving for days. It takes very little time to prepare and much less time to enjoy. Ensuring every single bite has a cheesy top, a crunchy bottom and a savory filling, this casserole is a must.</p>
+    </div>
+    <div class="ingredients">
     <h2>Ingredients</h2>
     <ul>
         <li>1 pound ground beef</li>
@@ -27,6 +34,8 @@
         <li>salt and pepper to taste</li>
         <li>cooking oil</li>
     </ul>
+    </div>
+    <div class="steps">
     <h2>Steps</h2>
     <ol>
         <li>Heat a large frying pan over medium to medium-high heat. Add oil to the pan.</li>
@@ -41,5 +50,6 @@
         <li>Cook in a preheated oven for 15 minutes or until cheese starts to bubble and brown.</li>
         <li>Serve in a bowl with the chilled pico de gallo made earlier and optionally more sour cream.</li>
     </ol>
+    </div>
 </body>
 </html>
