--- a/recipes/osso-buco.html
+++ b/recipes/osso-buco.html
@@ -3,14 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Osso Buco</title>
 </head>
 <body>
     <a href="../index.html">Home</a>
+    <br>
     <h1>Osso Buco</h1>
-     <img src="../images/osso-buco.jpg" alt="osso buco" width="300">
-    <h2>Description</h2>
-    <p></p>
+    <div class="pic">
+     <img src="../images/osso-buco.jpg" alt="osso buco">
+    </div>
+     <div class="description">
+     <h2>Description</h2>
+    <p>If you have 2 hours to spare for a meal, osso buco is a must. With the final product having meat so tender it melts in your mouth and a sauce so rich you want it injected into your bloodstream, osso buco makes a great dish to serve for any special event or a night in. Served on top cheesy garlic mashed potatoes will make great use of the sauce and have you enjoying every single bite. </p>
+    </div>
+    <div class="ingredients">
     <h2>Ingredients</h2>
     <ul>
         <li>2 pounds of veal shanks</li>
@@ -24,6 +31,8 @@
         <li>1 (14.5 ounce) can diced tomatoes</li>
         <li> salt and pepper to test</li>
     </ul>
+    </div>
+    <div class="steps">
     <h2>Steps</h2>
     <ol>
         <li>Dust the veal shanks with flour until they are lightly covered</li>
@@ -36,5 +45,6 @@
         <li>Meat should be tender but not falling of the bone.</li>
         <li>Serve and enjoy!</li>
     </ol>
+    </div>
 </body>
 </html>
