--- a/recipes/shepherds-pie.html
+++ b/recipes/shepherds-pie.html
@@ -3,16 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Shepherd's Pie</title>
 </head>
 <body>
     <a href="../index.html">Home</a>
+    <br>
     <h1>Shepherd's Pie</h1>
-    <img src="../images/shepherds-pie.jpg" alt="shepherd's pie" width="300">
+    <div class="pic">
+    <img src="../images/shepherds-pie.jpg" alt="shepherd's pie">
+    </div>
+    <div class="description">
     <h2>Description</h2>
-    <p></p>
+    <p>Perfect for chilly, weather, the shepherd's pie is a staple in British cuisine. Served hot, it seeps comfort and warms the spirit. Often mistaken as a complicated dish, it is very simple to make. A mixture of minced meat, cheesey potatoes and sweetness from the carrots makes it a complete experience and of the best dishes to enjoy with friends and family.</p>
+    </div>
+    <div class="ingredients">
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="list unordered">
         <li>4 large potatoes (peeled and cubed)</li>
         <li>1 tbsp butter</li>
         <li>1/2 cup shredded cheddar cheese</li>
@@ -24,6 +31,8 @@
         <li>1 tbsp ketchup</li>
         <li>3/4 cup beef broth</li>
     </ul>
+    </div>
+    <div class="steps">
     <h2>Steps</h2>
     <ol>
         <li>Bring a large pot of salted water to boil and add cubed and peeled potatoes until tender for about 15 minutes</li>
@@ -41,5 +50,6 @@
         <li>Bake in a preheated oven for 20 minutes, or until golden brown.</li>
         <li>Serve and enjoy!</li>
     </ol>
+    </div>
 </body>
 </html>
