--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
+    <h1 class="title">Odin Recipes</h1>
+    <div class="glossary">
+    <ul class="list unordered">
     <li><a href="./recipes/osso-buco.html">Osso Buco</a></li>
     <li><a href="./recipes/shepherds-pie.html">Shepherd's Pie</a></li>
     <li><a href="./recipes/nacho-casserole.html">Nacho Casserole</a></li>
     </ul>
+    </div>
 </body>
 </html>
